feat: add storefront checkout and observability